2017-02-27  Antoine Quint  <graouts@apple.com>

        [Modern Media Controls] Status text does not appear on iOS
        https://bugs.webkit.org/show_bug.cgi?id=168918
        <rdar://problem/30737644>

        Reviewed by Dean Jackson.

        Add a new test checking that we correctly display the status label on iOS.

        * media/modern-media-controls/ios-inline-media-controls/ios-inline-media-controls-status-label-expected.txt: Added.
        * media/modern-media-controls/ios-inline-media-controls/ios-inline-media-controls-status-label.html: Added.

2017-02-27  Jiewen Tan  <jiewen_tan@apple.com>

        [CredentialManagement] Add IDL definitions for Credential, SiteBoundCredential, and PasswordCredential
        https://bugs.webkit.org/show_bug.cgi?id=168616
        <rdar://problem/30167149>

        Reviewed by Daniel Bates.

        * credentials/idlharness-expected.txt: Added.
        * credentials/idlharness.html: Added.
        * platform/mac-elcapitan/js/dom/global-constructors-attributes-expected.txt:
        * platform/mac-wk1/js/dom/global-constructors-attributes-expected.txt:
        * platform/mac-yosemite/js/dom/global-constructors-attributes-expected.txt:
        * platform/mac/js/dom/global-constructors-attributes-expected.txt:
        * resources/WebIDLParser.js: Added.
        * resources/idlharness.js: Renamed from LayoutTests/imported/w3c/resources/idlharness.js.
        Removed LayoutTests/imported/w3c/resources/idlharness.js since it is not needed any more.
        Added resources/idlharness.js for idl harness.

2017-02-27  Jer Noble  <jer.noble@apple.com>

        [WebRTC] Fix remote audio rendering
        https://bugs.webkit.org/show_bug.cgi?id=168898

        Reviewed by Eric Carlson.

        * webrtc/audio-peer-connection-webaudio-expected.txt: Added.
        * webrtc/audio-peer-connection-webaudio.html: Added.

2017-02-27  Fujii Hironori  <Hironori.Fujii@sony.com>
