@@ -1,3 +1,14 @@
+2017-02-27  Chris Dumez  <cdumez@apple.com>
+
+        LayoutTest fast/events/currentTarget-gc-crash.html is a flaky failure
+        https://bugs.webkit.org/show_bug.cgi?id=168917
+
+        Reviewed by Alex Christensen.
+
+        Make sure we never call finishJSTest() more than once.
+
+        * fast/events/currentTarget-gc-crash.html:
+
 2017-02-27  Antoine Quint  <graouts@apple.com>
 
         [Modern Media Controls] Status text does not appear on iOS
